Fixed issue where recommended profiles on Following page were off centered.

--- a/src/app/featured/featured.component.css
+++ b/src/app/featured/featured.component.css
@@ -1,3 +1,10 @@
+.recommended-profiles {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+}
+
 .heading-container {
     color: white;
     background-color: var(--surface);
